# netlite

./: CMakeLists.txt  README.md  notes.txt
cmake-modules/: CMakeDaleCompiler.cmake.in  CMakeDaleInformation.cmake  CMakeDetermineDaleCompiler.cmake  CMakeTestDaleCompiler.cmake
lua-5.4.4/src/: lua  luac
src/: common.dt  main.dt
src/bindings/: sdl2.h.dt
